# SOEM

./: CMakeLists.txt  package.xml
cmake/Modules/Platform/: rt-kernel-gcc.cmake
debian/: postinst.in
include/soem/soem/: ethercatbase.c  ethercatfoe.c  ethercatmain.c  ethercattype.h
test/intime/ec_master/: ec_master.c
test/linux/: aliastool.c
test/linux/ebox/: ebox.c
test/linux/eepromtool/: CMakeLists.txt  eepromtool.c
test/linux/elmo_twitter/: ecatcomm.c
test/linux/firm_update/: firm_update.c
test/linux/red_test/: red_test.c
test/linux/simple_test/: simple_test.c
test/linux/slaveinfo/: CMakeLists.txt  ecatcomm_data.c  slaveinfo.c
test/win32/ebox/: ebox.c
test/win32/eepromtool/: eepromtool.c
test/win32/red_test/: red_test.c
test/win32/simple_test/: simple_test.c
test/win32/slaveinfo/: slaveinfo.c
